--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
 # Binaries for programs and plugins
+*
 *.exe
 *.exe~
 *.dll
@@ -29,4 +30,10 @@ go.work.sum
 
 # Editor/IDE
 # .idea/
-# .vscode/
+.vscode/
+!*.go
+!*.sum
+!*.mod
+!.gitignore
+!LICENSE
+!*.md
