Adds task runner. fixes .gitignore for linux exe, adds to README

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
 # Binaries for programs and plugins
-*
 *.exe
 *.exe~
 *.dll
@@ -31,9 +30,14 @@ go.work.sum
 # Editor/IDE
 # .idea/
 .vscode/
+
+#ignore default binary
+spudpad
+
 !*.go
 !*.sum
 !*.mod
 !.gitignore
 !LICENSE
 !*.md
+!*.yml
