--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:  # allows manual trigger from GitHub UI
+  workflow_dispatch:
 
 jobs:
   build-windows:
@@ -18,20 +18,28 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.23'  # or '1.24' — check your go.mod
+          go-version: '1.23'  # match your go.mod; bump to 1.24 if needed
 
       - name: Install fyne-cross
         run: go install github.com/fyne-io/fyne-cross@latest
 
       - name: Build Windows executable with fyne-cross
-        run: fyne-cross windows -arch=amd64 -app-id com.eatpowernode.spudpad
+        run: |
+          fyne-cross windows -arch=amd64 -app-id com.eatpowernode.spudpad -name SpudPad
+          # Optional: add -release for stripped/smaller binary later
 
-      # fyne-cross outputs to fyne-cross/dist/windows-amd64/SpudPad.exe (or your module name)
+      - name: Debug: List output files
+        run: |
+          ls -la fyne-cross/dist/windows-amd64/ || echo "dist folder not found"
+          find fyne-cross -type f || echo "No files in fyne-cross dir"
 
-      - name: Upload Windows artifact
+      - name: Upload Windows artifact (try common names)
         uses: actions/upload-artifact@v4
         with:
           name: SpudPad-Windows
-          path: fyne-cross/dist/windows-amd64/SpudPad.exe
-          if-no-files-found: error
+          path: |
+            fyne-cross/dist/windows-amd64/*.exe
+            fyne-cross/dist/windows-amd64/SpudPad.exe
+            fyne-cross/dist/windows-amd64/spudpad.exe
+          if-no-files-found: warn   # changed to warn so we see logs even if missing
           retention-days: 7
